--- a/index.html
+++ b/index.html
@@ -5,12 +5,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Weather RnC</title>
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body align = "center">
-    <form action="/" method="post"><label for="cityInput">City Name:</label>
-        <input type="text" name="cityName">
-        <button type="submit">Go</button>
-    </form>
+    <div class="firstdiv">
+    <h1>Welcome to <em><b>RnC</b></em> Weather Forecast</h1>
+     
+    </div>
+    <div class="inputbutton">
+        <h3>Search the weather of your favourite city!</h3>
+        <form action="/" method="post"><label for="cityInput">City Name:</label>
+            <input type="text" name="cityName">
+            <button type="submit">Go</button>
+        </form>
+    </div>
+   
     
 </body>
 </html>
